--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<html><head><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"><meta charset="utf-8"><title>Bootstrap博客模板_个人网站模板第2页 _Bootstrap模板库</title><meta name="keywords" content="Bootstrap模板,博客模板"><meta name="description" content="汇聚顶级Bootstrap个人博客网站设计作品,提供在线预览,下载精品响应式个人博客网站html5模板就上Bootstrap模板网"><link rel="Shortcut Icon" href="/content/images/fav.png"><link href="/Content/theme?v=C6lAFWwvaL-O03CI6h3e0cBdopu-EcF6sUtiTGDZvQM1" rel="stylesheet"><script src="https://hm.baidu.com/hm.js?ca5751f96dbac91862e169ed6ad20e18"></script><script src="/bundles/jquery?v=6bFaskkKy8kNUWG98NGxkmWTG_dt9fDDLxJ3Wd0QxLg1"></script><script type="application/ld+json">{
+<html><head><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"><meta charset="utf-8"><title>Tarot time</title><meta name="keywords" content="Bootstrap模板,博客模板"><meta name="description" content="汇聚顶级Bootstrap个人博客网站设计作品,提供在线预览,下载精品响应式个人博客网站html5模板就上Bootstrap模板网"><link rel="Shortcut Icon" href="/content/images/fav.png"><link href="/Content/theme?v=C6lAFWwvaL-O03CI6h3e0cBdopu-EcF6sUtiTGDZvQM1" rel="stylesheet"><script src="https://hm.baidu.com/hm.js?ca5751f96dbac91862e169ed6ad20e18"></script><script src="/bundles/jquery?v=6bFaskkKy8kNUWG98NGxkmWTG_dt9fDDLxJ3Wd0QxLg1"></script><script type="application/ld+json">{
         "@context": "https://ziyuan.baidu.com/contexts/cambrian.jsonld",
         "@id": "",
         "appid": "1598984465141572",
-        "title": "Bootstrap博客模板_个人网站模板第2页 _Bootstrap模板库",
+        "title": "Tarot_time",
         "images": [
         "http://imgs.bootstrapmb.com/2022/1/050342070.jpg"
         ],
