--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html>
+    a {
+        text-decoration: none;
+        border: 0.2px solid #000;
+        color: #000;
+        background: #FFFFFF;
+        padding: 5px;
+        border-radius: 1px;
+      }
     <head>
         <meta charset="utf-8">
         <title>Tarot time</title>
     </head>
     
     <body>
-        <h1>Get a reading</h1>
+        <a href="https://freecodecamp.org">Get a reading</a>
     </body>
 
 </html>
