--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </head>
     
     <body>
+        <h>Tarot time</h>
         <a href="https://freecodecamp.org">Get a reading</a>
     </body>
 
